fixed issue where images didnt align properly

--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,9 @@ html {
   text-align: center;}
 
 .friends {
-  width: 100%;
-  height: 100%;
-  margin: 1px auto;
+  width: 150px;
+  height: 150px;
+  margin: .3em auto;
 }
 
 
